--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,15 @@
 # Site settings
 title: Clean Blog
 header-img: img/home-bg.jpg
-email: your-email@yourdomain.com
+email: excel@oktavianto.id
 copyright_name: Your/Project/Corporate Name
 description: "Write your site description here. It will be used as your sites meta description as well!"
-baseurl: "/startbootstrap-clean-blog-jekyll"
-url: "http://yourdomain.com"
-twitter_username: SBootstrap
-github_username:  davidtmiller
-facebook_username:  StartBootstrap
-email_username:  your-email@yourdomain.com
+baseurl: ""
+url: "https://oktavianto.github.io"
+twitter_username: ExcelDwiO
+github_username:  oktavianto
+facebook_username:  nothyz
+email_username:  excel@oktavianto.id
 
 # Google Analytics
 # To enable google analytics, uncomment below line with a valid Google Tracking ID
